--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "concurrently \"npm:dev\" \"npm:python\" ",
     "dev": "node index.js",
     "prettier": "prettier --write index.js",
     "python": "python3 index.py"
@@ -14,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@xenova/transformers": "^2.0.1",
+    "concurrently": "^8.0.1",
     "express": "^4.18.2",
     "node-fetch": "^3.3.1",
     "prettier": "^2.8.8",
